== HEAD

* Close pull request 471 - Fix Ruby 1.8 build when UTF16/32 default to little-endian (kennyj)
* Close pull request 475 - Shush warning on Object#blank? redefinition (amatsuda)
* Close pull request 489, 495 - Docs typos (JackDanger, francois)

== Version 2.5.3 - Sun Dec 4 15:52:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

* Close pull request 468 - Remove debug output to STDOUT (tadman)
* Fix up spec warnings
* Remove un needed require
* Ensure spec_helper constants only defined once
* Use stub against time instead of DateTime to avoid double redefinition error

== Version 2.5.2 - Sun Nov 18 15:01:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

* Removing double loading of treetop parsers to remove warnings
* Making parsers auto compile on spec suite and load in production code to avoid error that caused yank of 2.5.0
* Reapply pull request 443 - CC fields with semicolon are now parsed right (paulwittmann)

== Version 2.5.1 - Sun Nov 18 14:01:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

* Yanked 2.5.0
* Reverted pull request 443 - CC fields with semicolon are now parsed right (paulwittmann)

== Version 2.5.0 - Sun Nov 18 12:20:00 +1100 2012 Mikel Lindsaar <mikel@reinteractive.net>

Features:
* Close pull request 406 - Add Mail#eager_autoload! to load all autoloaded files on demand (bpot)
* Close pull request 461 - Allow string as delivery_method (skyeagle, radar)
* Close pull request 407 - Do not require Net::IMAP or Net::POP if they're already loaded (bpot)
* Close pull request 400 - Raise exception if delivery values or from values are missing completely from an email that is getting delivered (dmathieu)
* Close pull request 397 - Support dots in local part of the addresses (eac)
* Close pull request 477 - Fixed handling content_type with superfluous spaces (ledermann)
* Close pull request 451 - Ignore nil in addresses so things do not blow up when e.g. a user had no email (grosser)