@@ -113,7 +113,11 @@ module Mail
         response = smtp_obj.sendmail(message, envelope_from, destinations)
       end
 
-      return settings[:return_response] ? response : self
+      if settings[:return_response]
+        response
+      else
+        self
+      end
     end
     
 
@@ -123,18 +127,20 @@ module Mail
     # Just returns openssl verify mode for Ruby 1.8.x
     def ssl_context
       openssl_verify_mode = settings[:openssl_verify_mode]
+
       if openssl_verify_mode.kind_of?(String)
         openssl_verify_mode = "OpenSSL::SSL::VERIFY_#{openssl_verify_mode.upcase}".constantize
       end
-      if RUBY_VERSION < '1.9.0'
-        return openssl_verify_mode
-      end
 
-      context = Net::SMTP.default_ssl_context
-      context.verify_mode = openssl_verify_mode
-      context.ca_path = settings[:ca_path] if settings[:ca_path]
-      context.ca_file = settings[:ca_file] if settings[:ca_file]
-      context
+      if RUBY_VERSION < '1.9.0'
+        openssl_verify_mode
+      else
+        context = Net::SMTP.default_ssl_context
+        context.verify_mode = openssl_verify_mode
+        context.ca_path = settings[:ca_path] if settings[:ca_path]
+        context.ca_file = settings[:ca_file] if settings[:ca_file]
+        context
+      end
     end
   end
 end
